<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <!--Input Date Choice (Spinner)-->
            <TextView
                android:id="@+id/overtime_spinner_datechoice_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/overtime_label_datechoice" />

            <Spinner
                android:id="@+id/overtime_spinner_datechoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <!--Input Overtime Type (Spinner)-->
            <TextView
                android:id="@+id/overtime_spinner_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/overtime_label_type" />

            <Spinner
                android:id="@+id/overtime_spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />


            <LinearLayout
                android:id="@+id/overtime_lin_timerange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:weightSum="3">


                <!--Input Start Time-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textil_layout_overtime_starttime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3">

                    <EditText
                        android:id="@+id/overtime_edittext_starttime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center"
                        android:hint="@string/overtime_label_starttime"
                        android:singleLine="true"
                        android:textColor="@color/colorTextSecondary" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/overtime_label_sd"
                    android:textSize="15sp" />

                <!--Input End Time-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textil_layout_overtime_endtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3">

                    <EditText
                        android:id="@+id/overtime_edittext_endtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center"
                        android:hint="@string/overtime_label_endtime"
                        android:singleLine="true"
                        android:textColor="@color/colorTextSecondary" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <!--Input Alasan-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textil_layout_overtime_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp">

                <EditText
                    android:id="@+id/overtime_edittext_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/overtime_label_reason"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="4"
                    android:scrollbars="vertical" />

            </android.support.design.widget.TextInputLayout>


            <!--Submit-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/overtime_btn_submit"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_rounded_corner"
                    android:drawableLeft="@drawable/ic_submit_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="50dp"
                    android:text="@string/absence_label_submit"
                    android:textColor="@color/colorTextIcon" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/layout_empty_info"
        layout="@layout/single_empty_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
